GNOME Bugzilla – Bug 760332
gnome-session cannot restart crashed gnome-shell on X11
Last modified: 2016-01-18 18:49:48 UTC
As org.gnome.Shell.desktop contains 'X-GNOME-Autostart-Phase=DisplayServer', gnome-session thinks gnome-shell is a display server on both X11 and Wayland. This means that gnome-session exits when gnome-shell crashes on X11 instead of trying to restart it. It is very inconvenient because it is easy to crash gnome-shell on FreeBSD because of a GLib bug.
Created attachment 318988 [details] [review] manager: restart gnome-shell on X11 if it crashes gnome-shell calls itself a DisplayServer for ordering reasons, and because we share one file between wayland an X11. gnome-session currently doesn't try to restart a DisplayServer if it crashes, since the presumption is the old session will come down with it. This commit restarts "display server" applications on anything but wayland, because they can't actually be a display server in other cases.
does this fix it?
Yes, it can restart gnome-shell on X11 now.
Attachment 318988 [details] pushed as 91e74cc - manager: restart gnome-shell on X11 if it crashes